--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IsDB BISEW IT Scholarship Project</title>
+	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,11 +19,12 @@
 				<div class="col-8">
 					<div class="menu-bar">
 						<ul>
-							<li><a class="active" href="">Home</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a class="active" href="index.html">Home</a></li>
+							<li><a href="shop.html">Shop</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -38,9 +40,9 @@
 		<div class="row">
 			<div class="col-3">
 				<div class="side-link">
-			<h3>Our Recent Acctivity</h3>
-			<ul>
-						<li><a href="">Notice For Rent a Car</a></li>
+					<h3>Popular Category</h3>
+					<ul>
+						<li><a href="">Notice For Rent a Car <span>></span></a></li>
 						<li><a href="">City View in Holeday In</a></li>
 						<li><a href="">Karona Vairas</a></li>
 						<li><a href="">Last Hours </a></li>
@@ -48,27 +50,519 @@
 						<li><a href="">Shop collection</a></li>
 						
 					</ul>
-		</div>
+				</div>
 			</div>
 			<div class="col-9">
 				<div class="slider">
 					<div class="slider-img">
-						<img src="img/14.jpeg" alt="slider img">
+						<img src="img/slider2.jpg" alt="slider img">
 					</div>
 					<div class="slider-content">
-						<h1>This is slider heading</h1>
-						<p>This is slider content</p>
+						<h1>Welcome to our world's top ecomerce site</h1>
+						<p>latest item here, You have to see</p>
 						<button>SEE MORE</button>
 					</div>
 				</div>
 			</div>
 		</div>
-		
-		<!-- <div class="article-section">
-			<h1>Welcome to our IsDB BISEW IT Scholarship Project </h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut sed, maxime aliquam, sunt voluptate dolor debitis distinctio ipsa, doloremque eos repellat nihil, quisquam adipisci dignissimos pariatur blanditiis nemo aliquid molestiae sequi. Incidunt delectus, fugiat odio ea totam obcaecati, laboriosam aliquid est omnis minima praesentium non assumenda distinctio similique sit corrupti quisquam consectetur rerum, commodi dolores cum laudantium. Numquam, vel ratione consequuntur dignissimos accusamus laudantium iure obcaecati nulla illo suscipit voluptate iusto voluptatibus optio id veniam excepturi doloribus non. Sapiente molestias, aliquid vero harum adipisci quibusdam natus molestiae voluptatibus repudiandae est enim, quis odio tenetur perferendis. Libero velit officiis natus, quia.</p>
-
-		</div> -->
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="featured-product">
+				<div class="col-12">
+					<div class="section-heading">
+						<h2>Top Categories</h2>
+						<p>Here you have to see our Top Categories Products</p>
+					</div>					
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-agriculture.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Macin & Agriculture</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-applience.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Home & Applience</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-baby.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Mother & Baby</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-bike.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Motor Bike</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-book.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Book & Stationery</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-booking.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Hotel Booking</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-cloth.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Men & Women Cloth</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-conostraction.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Building & Constraction</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-electric.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Electrict</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-furniture.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Furniture</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-garden.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Home Garden</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-grocery.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Home Grocery</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-laptop.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Laptop</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-leather.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Leather Jacket</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-living.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Home Living</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-macinaries.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Macinaries</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-media.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Media & Mobile</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/c-sport.png" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Sport</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="featured-product">
+				<div class="col-12">
+					<div class="section-heading">
+						<h2>Featured Latest Products</h2>
+						<p>Here you have to see our Fearured Latest Products</p>
+					</div>					
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-walet.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Leate's Walet</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-3pcs.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Red Three Peces</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$89</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-bag.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Leather Bag</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$356</ins> &nbsp;<del style="font-weight: 500px;">$89756</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-belt.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Leather Belt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$35645</ins> &nbsp;<del style="font-weight: 500px;">$89978</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-cover.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Phone Cover</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$99</ins> &nbsp;<del style="font-weight: 500px;">$987</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-earphone.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Headphone</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$454</ins> &nbsp;<del style="font-weight: 500px;">$567</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-handwash.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Hand Wash</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$98</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-lighter.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Lighter</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$976</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-mask.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Mask</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$32</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-mobile.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Readmi Note 7 Prime</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$088</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-oil.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Rup Chanda Oil</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$768</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-plug.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Multi Plug</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$43</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-red-jacket.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Red Jacker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$234</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-rice.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Rice Miniket</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$76</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-shirt.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Black Shirt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$987</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-speaker.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Speaker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$456</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-tea.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Ispahani Tea</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$97</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-2">
+					<div class="single-product">
+						<div class="product-img">
+							<img src="img/p-trimar.jpg" alt="">
+						</div>
+						<div class="product-heading">
+							<p>Trimer</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$453</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="featured-product">
+				<div class="col-12">
+					<div class="section-heading">
+						<h2>Our Latest Blog</h2>
+						<p>Here you have to see our Blog Post</p>
+					</div>					
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur. <a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur. <a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 	<div class="container">
 		<div class="row">
