--- a/shop.html
+++ b/shop.html
@@ -20,9 +20,9 @@
 					<div class="menu-bar">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="shop.html">Shop</a></li>
+							<li><a class="active" href="shop.html">Shop</a></li>
 							<li><a href="blog.html">Blog</a></li>
-							<li><a class="active" href="gallery.html">Gallery</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
@@ -41,370 +41,442 @@
 			<div class="gallery-page">
 				<div class="col-12">
 					<div class="page-title">
-						<h2>Gallery</h2>
+						<h2>Shop</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="shop.html">Shop</a></li>
 						</ul>
 					</div>					
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-agriculture.png" alt="">
+							<img src="img/p-walet.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Macin & Agriculture</p>
+							<p>Leate's Walet</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-applience.png" alt="">
+							<img src="img/p-3pcs.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home & Applience</p>
+							<p>Red Three Peces</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$89</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-baby.png" alt="">
+							<img src="img/p-bag.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Mother & Baby</p>
+							<p>Leather Bag</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$356</ins> &nbsp;<del style="font-weight: 500px;">$89756</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-bike.png" alt="">
+							<img src="img/p-belt.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Motor Bike</p>
+							<p>Leather Belt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$35645</ins> &nbsp;<del style="font-weight: 500px;">$89978</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-book.png" alt="">
+							<img src="img/p-cover.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Book & Stationery</p>
+							<p>Phone Cover</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$99</ins> &nbsp;<del style="font-weight: 500px;">$987</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-booking.png" alt="">
+							<img src="img/p-earphone.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Hotel Booking</p>
+							<p>Headphone</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$454</ins> &nbsp;<del style="font-weight: 500px;">$567</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-cloth.png" alt="">
+							<img src="img/p-handwash.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Men & Women Cloth</p>
+							<p>Hand Wash</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$98</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-conostraction.png" alt="">
+							<img src="img/p-lighter.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Building & Constraction</p>
+							<p>Lighter</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$976</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-electric.png" alt="">
+							<img src="img/p-mask.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Electrict</p>
+							<p>Mask</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$32</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-furniture.png" alt="">
+							<img src="img/p-mobile.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Furniture</p>
+							<p>Readmi Note 7 Prime</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$088</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-garden.png" alt="">
+							<img src="img/p-oil.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Garden</p>
+							<p>Rup Chanda Oil</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$768</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-grocery.png" alt="">
+							<img src="img/p-plug.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Grocery</p>
+							<p>Multi Plug</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$43</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-laptop.png" alt="">
+							<img src="img/p-red-jacket.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Laptop</p>
+							<p>Red Jacker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$234</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-leather.png" alt="">
+							<img src="img/p-rice.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Leather Jacket</p>
+							<p>Rice Miniket</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$76</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-living.png" alt="">
+							<img src="img/p-shirt.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Living</p>
+							<p>Black Shirt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$987</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-macinaries.png" alt="">
+							<img src="img/p-speaker.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Macinaries</p>
+							<p>Speaker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$456</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-media.png" alt="">
+							<img src="img/p-tea.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Media & Mobile</p>
+							<p>Ispahani Tea</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$97</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-sport.png" alt="">
+							<img src="img/p-trimar.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Sport</p>
+							<p>Trimer</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$453</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-agriculture.png" alt="">
+							<img src="img/p-walet.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Macin & Agriculture</p>
+							<p>Leate's Walet</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-applience.png" alt="">
+							<img src="img/p-3pcs.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home & Applience</p>
+							<p>Red Three Peces</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$55</ins> &nbsp;<del style="font-weight: 500px;">$89</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-baby.png" alt="">
+							<img src="img/p-bag.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Mother & Baby</p>
+							<p>Leather Bag</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$356</ins> &nbsp;<del style="font-weight: 500px;">$89756</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-bike.png" alt="">
+							<img src="img/p-belt.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Motor Bike</p>
+							<p>Leather Belt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$35645</ins> &nbsp;<del style="font-weight: 500px;">$89978</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-book.png" alt="">
+							<img src="img/p-cover.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Book & Stationery</p>
+							<p>Phone Cover</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$99</ins> &nbsp;<del style="font-weight: 500px;">$987</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-booking.png" alt="">
+							<img src="img/p-earphone.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Hotel Booking</p>
+							<p>Headphone</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$454</ins> &nbsp;<del style="font-weight: 500px;">$567</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-cloth.png" alt="">
+							<img src="img/p-handwash.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Men & Women Cloth</p>
+							<p>Hand Wash</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$98</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-conostraction.png" alt="">
+							<img src="img/p-lighter.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Building & Constraction</p>
+							<p>Lighter</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$976</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-electric.png" alt="">
+							<img src="img/p-mask.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Electrict</p>
+							<p>Mask</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$32</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-furniture.png" alt="">
+							<img src="img/p-mobile.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Furniture</p>
+							<p>Readmi Note 7 Prime</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$088</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-garden.png" alt="">
+							<img src="img/p-oil.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Garden</p>
+							<p>Rup Chanda Oil</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$768</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-grocery.png" alt="">
+							<img src="img/p-plug.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Grocery</p>
+							<p>Multi Plug</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$43</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-laptop.png" alt="">
+							<img src="img/p-red-jacket.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Laptop</p>
+							<p>Red Jacker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$234</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-leather.png" alt="">
+							<img src="img/p-rice.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Leather Jacket</p>
+							<p>Rice Miniket</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$76</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-living.png" alt="">
+							<img src="img/p-shirt.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Home Living</p>
+							<p>Black Shirt</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$987</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-macinaries.png" alt="">
+							<img src="img/p-speaker.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Macinaries</p>
+							<p>Speaker</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$456</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-media.png" alt="">
+							<img src="img/p-tea.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Media & Mobile</p>
+							<p>Ispahani Tea</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$97</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-2">
 					<div class="single-product">
 						<div class="product-img">
-							<img src="img/c-sport.png" alt="">
+							<img src="img/p-trimar.jpg" alt="">
 						</div>
 						<div class="product-heading">
-							<p>Sport</p>
+							<p>Trimer</p>
+							<p style="margin-top:10px; "><ins  style="font-weight: bold;">$453</ins> &nbsp;<del style="font-weight: 500px;">$100</del></p>
+							<p></p>
 						</div>
 					</div>
 				</div>
