--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IsDB BISEW IT Scholarship Project</title>
+	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,11 +19,12 @@
 				<div class="col-8">
 					<div class="menu-bar">
 						<ul>
-							<li><a href="">Home</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="shop.html">Shop</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a class="active" href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -36,17 +38,16 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="page-title">
-				<h3>About</h3>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
+			<div class="gallery-page">
+				<div class="col-12">
+					<div class="page-title">
+						<h2>About us</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About</a></li>
+						</ul>
+					</div>					
+				</div>
 			<div class="col-9">
 				<div class="main-content">
 					<div class="main-content-img">
