--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IsDB BISEW IT Scholarship Project</title>
+	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,11 +19,12 @@
 				<div class="col-8">
 					<div class="menu-bar">
 						<ul>
-							<li><a href="">Home</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="shop.html">Shop</a></li>
+							<li><a class="active" href="blog.html">Blog</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a class="active"  href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
@@ -36,40 +38,147 @@
 	</div>
 	<div class="container">
 		<div class="row">
-			<div class="page-title">
-				<h3>Blog</h3>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="blog.html">Blog</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-9">
-				<div class="main-blog">
-					<div class="main-blog-img">
-						<img src="img/14.jpeg" alt="slider img">
-					</div>
-					<div class="main-content-area">
-						<h1>Here you will find out About us</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis eius, voluptatum rerum itaque exercitationem minus, quisquam eos deserunt soluta beatae ipsa sed voluptatem. Aliquid, sunt, iusto. Placeat reprehenderit, numquam eligendi, temporibus voluptas impedit perferendis dolores molestiae nemo deleniti. Nam laboriosam, molestias reiciendis veritatis cupiditate, ea aperiam. Blanditiis excepturi id repudiandae at praesentium consequatur quis, hic dignissimos, aliquid expedita numquam iusto iure nulla fuga doloribus dolorem voluptatem. Autem unde vel facere tenetur, veniam, quis pariatur ad excepturi totam repellendus. Ratione quia harum voluptatem ducimus eaque distinctio, eius, odio doloribus provident! Placeat cumque debitieum! Assumenda nam neque, corporis fugiat incidunt mollitia dolore porro maxime vel quidem cumque veniam rerum ex recusandae doloremque consectetur molestiae obcaecati. Nesciunt sunt, sequi quod modi accusamus iusto animi rem omnis dolore tempore ducimus, qui voluptatibus cumque inventore illo excepturi ad voluptate quas ipsum impedit possimus est voluptates. Enim cupiditate eius voluptate, sed impedit autem veritatis id molestias vitae, illo ipsam, optio. Iusto porro, officiis quas non iure vero excepturi aperiam quasi doloribus ipsam quis fuga numquam, ut consequuntur, voluptatum architecto distinctio, sint omnis molestiae exercitationem debitis consectetur consequatur et nulla tempore! Dolores obcaecati alias possimus aliquam odit adipisci nam et repellat omnis maxime reiciendis id distinctio impedit consequuntur nesciunt nostrum, voluptates debitis voluptas, hic sapiente iure minus? Itaque similique iure, aut maiores nulla? Consectetur animi quasi nulla facilis iure repellat, ex id explicabo ullam eum a reiciendis, et vitae obcaecserunt libero consequuntur quisquam accusantium praesentium temporibus optio fuga corrupti culpa natus itaque et sit vitae! Quae culpa tenetur ipsum mollitia! Dolorum eos dignissimos, consequatur alias! Nobis, suscipit tenetur a maiores sapiente ut! Quidem ab illo aperiam distinctio, modi incidunt quod. Officia asperiores reprehenderit nulla quo, perferendis corporis amet reiciendis, ad quos doloremque expedita saepe quisquam accusamus, iusto voluptates placeat offiiam pariatur, minus sequi rerum fuga alias, labore quibusdam laborum aliquam quasi voluptas, eius error ipsam saepe tempore maxime accusamus ut quas debitis. A quod quas aliquam. Fugiat quos distinctio culpa, maiores atque, consectetur fuga numquam optio nobis quibusdam qui laborum sint, sit. Non incidunt, nemo rerum distinctio esse eius officia suscipit! Dolorem in nisi quidem maxime exercitationem voluptates tempore, eaque doloremque illum. Sed veritatis quaerat aliquam pariatur, nisi tempore rerum temporibus accusamus necessitatibus soluta consequuntur quidem possimus dicta molestiae voluptates hic, quod voluptate id? Atque eaque est magnam earum fugiat nisi maiores voluptatibus veritatis reprehenderit quaerat?</p>
+			<div class="gallery-page">
+				<div class="col-12">
+					<div class="page-title">
+						<h2>Blog</h2>
+						<ul>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="blog.html">Blog</a></li>
+						</ul>
+					</div>					
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="col-3">
-				<div class="right-side-link">
-					<h3>Our Recent Acctivity</h3>
-					<ul>
-						<li><a href="">Notice For Rent a Car</a></li>
-						<li><a href="">City View in Holeday In</a></li>
-						<li><a href="">Karona Vairas</a></li>
-						<li><a href="">Last Hours </a></li>
-						<li><a href="">Top HTML & CSS templete</a></li>
-						<li><a href="">Shop collection</a></li>
-						
-					</ul>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur. <a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur. <a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="blog-single">
+						<div class="blog-img">
+							<img src="img/22.jpeg" alt="">
+						</div>
+						<div class="product-heading">
+							<h3>Releasing our latest new products</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos laudantium, possimus sed, debitis amet in, explicabo dolor similique eligendi officia numquam eaque quae illo magnam distinctio odio, esse vero aspernatur.<a href="">See More</a></p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
