--- a/single_blog.html
+++ b/single_blog.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>IsDB BISEW IT Scholarship Project</title>
+	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
@@ -18,11 +19,12 @@
 				<div class="col-8">
 					<div class="menu-bar">
 						<ul>
-							<li><a href="">Home</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li><a href="shop.html">Shop</a></li>
 							<li><a href="blog.html">Blog</a></li>
+							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
 				</div>
