--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>IsDB BISEW IT Scholarship Project</title>
+	<title>eShop || World largest E-comerce web site</title>
 	<link rel="stylesheet" href="css/contact.css">
 	<link rel="stylesheet" href="css/default.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -13,7 +13,7 @@
 			<div class="header-sec">
 				<div class="col-2">
 					<div class="header-logo">
-						<p class="middle">LOGO</p>
+						<p class="middle">eShop</p>
 					</div>
 				</div>
 				<div class="col-8">
